Changes since version 1.1.0
---------------------------

- Added ice_clone() member function to non-abstract classes. ice_clone() polymorphically
  copies a class instance. The copy is a deep copy for all types except for class members;
  class members are copied shallow, that is, if a class contains a class member, the original
  and the clone contain a Ptr that points at the same single class instance.

- Improved marshaling performance for built-in types (byte, bool, short, int, long,
  float, double, and string). This is noticable in particular when transmitting sequences
  of these types, sequences of structures containing these types, or large dictionaries
  containing these types.

- Added menu with several options to throughput demo.

- Added Linux/SPARC port from Ferris McCormick

- Fixed a bug where daemonized Ice::Application wouldn't shutdown
  properly.

- Major Freeze update:

  - Removed the lowest Freeze layer. You should use instead Berkeley
    DB directly.

  - For Freeze Maps and Evictors, the underlying Berkeley DB
    environment is now always transactional. New configurations
    variables:

      - Freeze.<envName>.DbHome provides the path to the DB home, and
        defaults to <envName>.

      - Freeze.<envName>.DbRecoverFatal triggers "fatal recovery" when
        set to a value other than 0 (defaults to 0).

      - Freeze.<envName>.DbPrivate when set to a value other than 0
        tells Berkeley DB to use process private memory instead of
        shared memory. Defaults to 1. Set it to 0 when you want to run
        db_stat (or another Berkeley DB utility) on a running
        environment.

      - Freeze.<envName>.DbCheckpointPeriod: each Berkeley DB
        environment created by Freeze has an associated thread that
        checkpoints this environment every DbCheckpointPeriod minutes.
        Defaults to 3 minutes.

      - Freeze.<envName>.PeriodicCheckpointMinSize defines the minimum