@@ -68,13 +68,6 @@ RegistryServer::usage()
 int
 RegistryServer::run(int argc, char* argv[])
 {
-    Ice::PropertiesPtr properties = communicator()->getProperties();    
-    
-    Ice::StringSeq args = Ice::argsToStringSeq(argc, argv);
-    args = properties->parseCommandLineOptions("IcePack", args);
-    args = properties->parseCommandLineOptions("Freeze", args);
-    Ice::stringSeqToArgs(args, argc, argv);
-
     bool nowarn = false;
     for(int i = 1; i < argc; ++i)
     {
