@@ -1,6 +1,10 @@
 Changes since version 1.1.0
 ---------------------------
 
+- Added Ice::Properties::parseIceCommandLineOptions(). This operation converts to
+  properties all options that start with one of the following prefixes:
+  --Ice, --IceBox, --IcePack, --IcePatch, --IceSSL, --IceStorm, --Freeze, and --Glacier.
+
 - Added menu with several options to throughput demo.
 
 - Major Freeze update. See corresponding entry in the Ice for C++
